--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.h2.console.enabled=true
 
 # the path for the h2 web console
 spring.h2.console.path=/h2
-
+spring.h2.console.settings.web-allow-others=true
 # we can change the name of the database, in this case it will be called `mydb`
 #spring.datasource.url=jdbc:h2:mem:issuedb
 spring.datasource.url=jdbc:h2:file:./reservationdb
